--- a/README.yml
+++ b/README.yml
@@ -4,10 +4,9 @@ owner:
     name: Wu, Yujie
     url: https://github.com/bigdata-i523/hid235
 paper1:
-    abstract: 'Paper 1 will be focused on how the company recommend their products
-        and services to their customers based on the data about customers'' preferences.
-
-        '
+    abstract: >
+        Paper 1 will be focused on how the company recommend their products
+        and services to their customers based on the data about customers preferences.
     author:
         - Yujie Wu
     chapter: Business
@@ -18,8 +17,9 @@ paper1:
     type: latex
     url: https://github.com/bigdata-i523/hid235/paper1/paper1.pdf
 paper2:
-    abstract: Paper 1 will be focused on how the company recommend their products
-        and services to their customers based on the data about customers' preferences.
+    abstract: >
+        Paper 1 will be focused on how the company recommend their products
+        and services to their customers based on the data about customers preferences.
     author:
         - Yujie Wu
     hid:
