--- a/README.yml
+++ b/README.yml
@@ -28,7 +28,7 @@ paper2:
     hid:
         - 235
     status: in progress
-    title: Big data: An Opportunity for Historians
+    title: "Big data: An Opportunity for Historians"
     type: latex
     url: 
     
