--- a/README.yml
+++ b/README.yml
@@ -18,6 +18,7 @@ paper1:
     url: https://github.com/bigdata-i523/hid235/paper1/paper1.pdf
     
 paper2:
+    review: Nov 6 2017
     abstract: >
         In human history, catastrophe, wars, big event led to a incredible loss of life. 
         Historians collect the data of life and do the statistical analysis. 
