--- a/README.yml
+++ b/README.yml
@@ -15,7 +15,7 @@ paper1:
     status: 100%, 10/27/2017
     title: Big Data in Recommendation System
     type: latex
-    url: https://github.com/bigdata-i523/hid235/paper1/paper1.pdf
+    url: https://github.com/bigdata-i523/hid235/paper1/report.pdf
     
 paper2:
     review: Nov 6 2017
@@ -28,10 +28,10 @@ paper2:
         - Yujie Wu
     hid:
         - 235
-    status: in progress
+    status: 100%, 11/06/2017
     title: "Big data: An Opportunity for Historians"
     type: latex
-    url: 
+    url: https://github.com/bigdata-i523/hid235/paper2/report.pdf
     
 project:
     abstract: >
