--- a/README.yml
+++ b/README.yml
@@ -15,7 +15,7 @@ paper1:
     status: 100%, 10/27/2017
     title: Big Data in Recommendation System
     type: latex
-    url: https://github.com/bigdata-i523/hid235/paper1/report.pdf
+    url: https://github.com/bigdata-i523/hid235/paper1/review.pdf
     
 paper2:
     review: Nov 6 2017
@@ -31,7 +31,7 @@ paper2:
     status: 100%, 11/06/2017
     title: "Big data: An Opportunity for Historians"
     type: latex
-    url: https://github.com/bigdata-i523/hid235/paper2/report.pdf
+    url: https://github.com/bigdata-i523/hid235/paper2/report.tex
     
 project:
     abstract: >
