--- a/README.yml
+++ b/README.yml
@@ -44,4 +44,4 @@ project:
         - 235
     title: Big Data analytics in predict house price
     type: project
-    url: 
+    url: https://github.com/bigdata-i523/hid235/tree/master/project
