--- a/README.yml
+++ b/README.yml
@@ -45,3 +45,4 @@ project:
     title: Big Data analytics in predict house price
     type: project
     url: https://github.com/bigdata-i523/hid235/tree/master/project
+    chapter: Business
