--- a/project/README.yml
+++ b/project/README.yml
@@ -1,14 +1,15 @@
 project:
     review: Dec 4 2017
     author:
-        - Junjie Lu
+        - Yujie Wu
     hid:
         - 235
-    title: Benchmarking a BigData Docker deployment
+    title: Big Data analytics in predict house price
     abstract: >
-        We showcase tis and that and the other
-        and another line.
-    url: https://github.com/bigdata-i523/sample-hid000/project/
+        House price changes dynamically and it costs human power to evaluate the price. 
+        This project uses a large data set obtained from house dealings and algorithms 
+        to predict if house price is reasonable.
+    url: https://github.com/bigdata-i523/hid235/tree/master/project
     type: project
-    status: Dec 04 17 0%
-    chapter: TBD
+    status: Dec 04 17 100%
+    chapter: Business
